Fix title/desc from wrapping content.
For: https://unisubs.sifterapp.com/projects/12298/issues/733157/comments

--- a/media/css/unisubs-widget.css
+++ b/media/css/unisubs-widget.css
@@ -1288,6 +1288,7 @@ ul.unisubs-titlesList.unisubs-beginTab .unisubs-beginTabLi {
     color: #C0C0C0;
     display: block;
     text-transform: uppercase;
+    width: 100% !important;
 }
 .unisubs-title:hover {
 
